--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.servlet.context-path=/
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql.cdyg2w4qwyp6.ap-northeast-2.rds.amazonaws.com:3306/shoppingmall_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=shoppingmall
-spring.datasource.password=shoppingmall
+spring.datasource.url=jdbc:mysql://mysql.c5g80y08oixn.ap-northeast-2.rds.amazonaws.com:3306/udiya_db?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=udiya
+spring.datasource.password=udiya
 
 # mybatis
 mybatis.config-location=classpath:mybatis/configuration.xml
